# porcupines-data

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  custom_encoders.md  encoders.md
examples/: test_image_gray.npy  visualize_encoders.py
snn_encoder/: __init__.py  base.py  utils.py
snn_encoder/encoders/: __init__.py  delta.py  i2e.py  latency.py  odg.py  poisson.py  rate.py  rrc.py
tests/: test_encoders.py
train/: dataset.py  model.py  requirements.txt  train.py
